--- a/Problem Set 2/CMakeLists.txt
+++ b/Problem Set 2/CMakeLists.txt
@@ -4,6 +4,11 @@
 # <author>  Quan Tran Minh. edit by Johannes Kast, Michael Sarahan </author>
 # <email>   quantm@unist.ac.kr  kast.jo@googlemail.com msarahan@gmail.com</email>
 ############################################################################
+cmake_minimum_required(VERSION 2.8)
+find_package(CUDA QUIET REQUIRED)
+find_package(OpenCV REQUIRED)
+
+include_directories(${OpenCV_INCLUDE_DIRS})
 
 # collect source files
 
@@ -12,3 +17,5 @@ file( GLOB  cu  *.cu)
 SET (HW2_files main.cpp reference_calc.cpp compare.cpp)
     
 CUDA_ADD_EXECUTABLE(HW2 ${HW2_files} ${hdr} ${cu})
+
+target_link_libraries(HW2 ${OpenCV_LIBS})
