--- a/OpenCVDemo/demo1/CMakeLists.txt
+++ b/OpenCVDemo/demo1/CMakeLists.txt
@@ -2,18 +2,12 @@ cmake_minimum_required(VERSION 2.8.12)
 
 project(demo)
 
-# SET("OpenCV_DIR" "/usr/local/include/opencv2/")
-
 find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
-include_directories("/usr/local/include/opencv2/")
-
 
 #MESSAGE(STATUS "Include dirs ${OpenCV_INCLUDE_DIRS}")
 #MESSAGE(STATUS "LINK LIBRARIES ${OpenCV_LIBS}")
 
-add_executable(demo
-    demo.cpp
-    /usr/local/include/opencv2/viz)
+add_executable(demo demo.cpp)
 
 target_link_libraries(demo ${OpenCV_LIBS})
